fixed bug with flickering chart fixed bug with async loading (chart data) added applied badge to enchantment filter

--- a/src/components/EnchantmentFilter/EnchantmentFilter.css
+++ b/src/components/EnchantmentFilter/EnchantmentFilter.css
@@ -9,3 +9,7 @@
 .enchantment-filter-label {
     margin-right: 15px;
 }
+
+.appliedBadge {
+    margin-left: 10px;
+}
